# json_diff_c

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  REFACTORING_PLAN.md  SECURITY_ANALYSIS.md  THEFT_INTEGRATION.md  fuzz_json_diff.c  json_diff.c  json_diff.h  meson.build  run_advanced_tests.sh  test_json_diff.c  test_profile.c
.github/workflows/: ci.yml  extensive-tests.yml  fuzzing.yml
profile-data/: get_big.sh  get_medium.sh
src/: jsmn.h  jsmn_tree.c  jsmn_tree.h  json_diff.c  json_diff.h  myers.c  myers.h  parse_jsmn.c  parse_jsmn.h
tests/: bench_jsmn.c  bench_medium.c  bench_parse.c  big_diff.json  fuzz_json_diff.c  jsmn.c  test_behavior_verification.c  test_generative.c  test_js_compat.c  test_js_compat_simple.c  test_json_diff.c  test_myers.c  test_node_compare.c  test_profile.c  test_properties.c  test_security.c  test_theft_fuzzing.c  test_theft_properties.c
